--- a/resources/config.yml
+++ b/resources/config.yml
@@ -1,5 +1,5 @@
 ﻿---
-# Developed by TheAz928 (Az928)
+# Developed by StrafelessPvP (StrafelessPvP)
 # Configuration file for ServerGuide
 
 # ServerGuide Item
